# sentrux

./: README.de.md  README.ja.md  README.md  README.zh-CN.md
.github/workflows/: build-grammars.yml  ci-release.yml  ci.yml  release.yml
docs/: heurex-fork.md
sentrux-bin/: Cargo.toml  build.rs
sentrux-bin/src/: main_impl.rs
sentrux-core/: Cargo.toml
sentrux-core/src/analysis/: csharp_refs.rs  mod.rs  project_refs.rs
sentrux-core/src/analysis/graph/: mod.rs  tests.rs
sentrux-core/src/analysis/plugin/: loader.rs  mod.rs
sentrux-core/src/analysis/resolver/: suffix.rs
sentrux-core/src/analysis/scanner/: mod.rs  rescan.rs  sentruxignore.rs
sentrux-core/src/app/: scanning_tests.rs
sentrux-core/src/app/mcp_server/: handlers.rs  mod.rs
sentrux-core/src/core/: snapshot.rs  types.rs
sentrux-core/src/layout/: test_helpers.rs  tests.rs  tests2.rs
sentrux-core/src/metrics/: mod.rs  mod_tests.rs  test_helpers.rs  types.rs
sentrux-core/src/metrics/arch/: mod.rs  tests.rs  tests2.rs
sentrux-core/src/metrics/rules/: checks.rs  mod.rs  tests.rs
sentrux-core/src/metrics/testgap/: tests.rs
sentrux-core/src/metrics/whatif/: mod.rs
